RESOLVED FIXED 234552
IPC streams should not accept 0-length stream buffers
https://bugs.webkit.org/show_bug.cgi?id=234552
Summary IPC streams should not accept 0-length stream buffers
Kimmo Kinnunen
Reported 2021-12-21 02:04:51 PST
IPC streams should not accept 0-length stream buffers
Attachments
Patch (2.19 KB, patch)
2021-12-21 02:43 PST, Kimmo Kinnunen
no flags
Patch for landing (2.23 KB, patch)
2021-12-21 03:42 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-12-21 02:06:48 PST
Kimmo Kinnunen
Comment 2 2021-12-21 02:43:50 PST
Antti Koivisto
Comment 3 2021-12-21 02:45:47 PST
Comment on attachment 447705 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=447705&action=review > Source/WebKit/ChangeLog:9 > + Make decoding 0-length stream buffers, they are not useful. Make what?
Kimmo Kinnunen
Comment 4 2021-12-21 03:42:42 PST
Created attachment 447709 [details] Patch for landing
EWS
Comment 5 2021-12-21 06:08:23 PST
Committed r287313 (245465@main): <https://commits.webkit.org/245465@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447709 [details].
Note You need to log in before you can comment on or make changes to this bug.